--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -118,13 +118,13 @@ BrowseByChooseYear = W\u00E4hle Jahr
 
 BrowseByCreator = Personen
 
-BrowseByCreatorDesc = Browse by person names and view the corresponding items.
+BrowseByCreatorDesc = Browsen nach Personennamen und Zugriff auf die entsprechenden Datens\u00E4tze.
 
 BrowseByInitial = Anfangsbuchstabe:
 
 BrowseByOrg = Organisationen
 
-BrowseByOrgDesc = Browse by organizational unit names and view the corresponding items.
+BrowseByOrgDesc = Browsen nach Organisationseinheiten und Zugriff auf die entsprechenden Datens\u00E4tze.
 
 BrowseByPage = Browse
 
@@ -134,7 +134,7 @@ BrowseBySubject = Schlagw\u00F6rter
 
 BrowseByYear = Browse By Jahr
 
-BrowseByYearDesc = Browse by year and view the corresponding items.
+BrowseByYearDesc = Browsen nach Jahresangaben und Zugriff auf die entsprechenden Datens\u00E4tze.
 
 #
 #CartItemsPage
@@ -425,7 +425,7 @@ ENUM_IDENTIFIERTYPE_URN = URN
 
 ENUM_IDENTIFIERTYPE_ZDB = ZDB
 
-ENUM_IMPORT_FORMAT_BIBTEX = BibTex
+ENUM_IMPORT_FORMAT_BIBTEX = BibTeX
 
 ENUM_IMPORT_FORMAT_EDOC = eDoc
 
@@ -448,6 +448,8 @@ ENUM_INVITATIONSTATUS_INVITED = Eingeladen
 ENUM_LANGUAGE_DE = Deutsch
 
 ENUM_LANGUAGE_EN = English
+
+ENUM_LANGUAGE_ES = Espa\u00F1ol
 
 ENUM_LANGUAGE_JA = \u65E5\u672C\u8A9E
 
@@ -778,9 +780,9 @@ Export_ExportFormat_XML = xml
 
 Export_FileFormat_ESCIDOC_SNIPPET = eSciDoc Snippet
 
-Export_FileFormat_HTML_PLAIN = html (unformatiert)
-
 Export_FileFormat_HTML_LINKED = html (verlinkt)
+
+Export_FileFormat_HTML_PLAIN = html (unformatiert)
 
 Export_FileFormat_HTML_STYLED = html (formatiert)
 
