--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -424,7 +424,7 @@ ENUM_IDENTIFIERTYPE_URN = URN
 
 ENUM_IDENTIFIERTYPE_ZDB = ZDB
 
-ENUM_IMPORT_FORMAT_BIBTEX = BibTex
+ENUM_IMPORT_FORMAT_BIBTEX = BibTeX
 
 ENUM_IMPORT_FORMAT_EDOC = eDoc
 
@@ -447,6 +447,8 @@ ENUM_INVITATIONSTATUS_INVITED = Invited
 ENUM_LANGUAGE_DE = Deutsch
 
 ENUM_LANGUAGE_EN = English
+
+ENUM_LANGUAGE_ES = Espa\u00F1ol
 
 ENUM_LANGUAGE_JA = \u65E5\u672C\u8A9E
 
@@ -777,9 +779,9 @@ Export_ExportFormat_XML = xml
 
 Export_FileFormat_ESCIDOC_SNIPPET = eSciDoc Snippet
 
-Export_FileFormat_HTML_PLAIN = html (plain)
-
 Export_FileFormat_HTML_LINKED = html (linked)
+
+Export_FileFormat_HTML_PLAIN = html (plain)
 
 Export_FileFormat_HTML_STYLED = html (formatted)
 
