--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -429,6 +429,8 @@ ENUM_LANGUAGE_DE = Deutsch
 
 ENUM_LANGUAGE_EN = English
 
+ENUM_LANGUAGE_ES = Espa\u00F1ol
+
 ENUM_LANGUAGE_JA = \u65E5\u672C\u8A9E
 
 ENUM_LOGICOPTIONS_LOGIC_AND = AND
@@ -757,9 +759,9 @@ Export_ExportFormat_XML = xml
 
 Export_FileFormat_ESCIDOC_SNIPPET = \u5F15\u7528\u5F62\u5F0F\u4ED8\u304DXML 
 
-Export_FileFormat_HTML_PLAIN = html (\u30B7\u30F3\u30D7\u30EB)
-
 Export_FileFormat_HTML_LINKED = html (linked)
+
+Export_FileFormat_HTML_PLAIN = html (\u30B7\u30F3\u30D7\u30EB)
 
 Export_FileFormat_HTML_STYLED = html (\u88C5\u98FE\u4ED8)
 
