--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -379,7 +379,9 @@ import_process_initialization_failed = Initialisierung fehlgeschlagen
 
 import_process_initialize = Initialisierung
 
-import_process_initialize_delete_process_error = W\u00E4hrend der Initialiesierung des L\u00F6schvorgangs ist ein Fehler aufgetreten
+import_process_initialize_delete_process = Initialisierung des L\u00F6schvorgangs
+
+import_process_initialize_delete_process_error = W\u00E4hrend der Initialisierung des L\u00F6schvorgangs ist ein Fehler aufgetreten
 
 import_process_initialize_submit_process = Intitialisierung des Einstellens
 
