--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -382,6 +382,8 @@ import_process_initialization_failed = Initialization failed
 
 import_process_initialize = Initializing
 
+import_process_initialize_delete_process = Initializing deletion process
+
 import_process_initialize_delete_process_error = Error while initializing deletion process
 
 import_process_initialize_submit_process = Initializing submission
