--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -252,10 +252,11 @@ ENUM_INVITATIONSTATUS_INVITED = Eingeladen
 
 ENUM_LANGUAGE_DE = Deutsch
 
-#
-# HomePage
-#
 ENUM_LANGUAGE_EN = Englisch
+
+ENUM_LANGUAGE_JA = Japanisch
+
+ENUM_LANGUAGE_ES = Spanisch
 
 ENUM_LOGICOPTIONS_LOGIC_AND = UND
 
