--- a/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
@@ -252,10 +252,11 @@ ENUM_INVITATIONSTATUS_INVITED = Invited
 
 ENUM_LANGUAGE_DE = German
 
-#
-# HomePage
-#
 ENUM_LANGUAGE_EN = English
+
+ENUM_LANGUAGE_JA = Japanese
+
+ENUM_LANGUAGE_ES = Spanish
 
 ENUM_LOGICOPTIONS_LOGIC_AND = AND
 
