Former-commit-id: 2dde63aac5b5c4064a1904209f97eb49723d3c2c

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -215,6 +215,8 @@ ENUM_CONTENTCATEGORY_table-of-contents = Inhaltsverzeichnis
 
 ENUM_CREATORROLE_ADVISOR = Ratgeber
 
+ENUM_CREATORROLE_APPLICANT = Antragssteller
+
 ENUM_CREATORROLE_ARTIST = K\u00FCnstler
 
 ENUM_CREATORROLE_AUTHOR = Autor
@@ -228,6 +230,8 @@ ENUM_CREATORROLE_EDITOR = Herausgeber
 ENUM_CREATORROLE_HONOREE = geehrte Person/Institution
 
 ENUM_CREATORROLE_ILLUSTRATOR = Illustrator
+
+ENUM_CREATORROLE_INVENTOR = Erfinder
 
 ENUM_CREATORROLE_PAINTER = Maler
 
@@ -372,6 +376,8 @@ ENUM_GENRE_OTHER = Sonstige
 
 ENUM_GENRE_PAPER = Forschungspapier
 
+ENUM_GENRE_PATENT = Patent
+
 ENUM_GENRE_POSTER = Poster
 
 ENUM_GENRE_PROCEEDINGS = Konferenzband
@@ -411,6 +417,12 @@ ENUM_IDENTIFIERTYPE_ISSN = ISSN
 
 ENUM_IDENTIFIERTYPE_OTHER = Anderer
 
+ENUM_IDENTIFIERTYPE_PATENT_APPLICATION_NUMBER = Patentantragsnummer
+
+ENUM_IDENTIFIERTYPE_PATENT_NUMBER = Patentnummer
+
+ENUM_IDENTIFIERTYPE_PATENT_PUBLICATION_NUMBER = Patentpublikationsnummer
+
 ENUM_IDENTIFIERTYPE_PII = PII
 
 ENUM_IDENTIFIERTYPE_PMC = PMC
@@ -425,7 +437,7 @@ ENUM_IDENTIFIERTYPE_URN = URN
 
 ENUM_IDENTIFIERTYPE_ZDB = ZDB
 
-ENUM_IMPORT_FORMAT_BIBTEX = BibTeX
+ENUM_IMPORT_FORMAT_BIBTEX = BibTex
 
 ENUM_IMPORT_FORMAT_EDOC = eDoc
 
@@ -1756,6 +1768,8 @@ adv_search_lblChkGenre_other = Sonstige
 
 adv_search_lblChkGenre_paper = Forschungspapier
 
+adv_search_lblChkGenre_patent = Patent
+
 adv_search_lblChkGenre_poster = Poster
 
 adv_search_lblChkGenre_proceedings = Konferenzband
@@ -2135,6 +2149,14 @@ g_source_identifiers = Identifikator
 g_source_volume_issue_pages = Details zur Quelle
 
 g_sources = Quelle
+
+genre_patent_application_date = Anmeldungsdatum
+
+genre_patent_authority_code = Beh\u00F6rdencode
+
+genre_patent_authority_place = Beh\u00F6rdenstandort
+
+genre_patent_publication_date = Ver\u00F6ffentlichungsdatum
 
 import_workspace_actions = Aktionen
 
