--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -214,6 +214,8 @@ ENUM_CONTENTCATEGORY_table-of-contents = Table of contents
 
 ENUM_CREATORROLE_ADVISOR = Advisor
 
+ENUM_CREATORROLE_APPLICANT = Applicant
+
 ENUM_CREATORROLE_ARTIST = Artist
 
 ENUM_CREATORROLE_AUTHOR = Author
@@ -227,6 +229,8 @@ ENUM_CREATORROLE_EDITOR = Editor
 ENUM_CREATORROLE_HONOREE = Honoree
 
 ENUM_CREATORROLE_ILLUSTRATOR = Illustrator
+
+ENUM_CREATORROLE_INVENTOR = Inventor
 
 ENUM_CREATORROLE_PAINTER = Painter
 
@@ -371,6 +375,8 @@ ENUM_GENRE_OTHER = Other
 
 ENUM_GENRE_PAPER = Working Paper
 
+ENUM_GENRE_PATENT = Patent
+
 ENUM_GENRE_POSTER = Poster
 
 ENUM_GENRE_PROCEEDINGS = Proceedings
@@ -409,6 +415,12 @@ ENUM_IDENTIFIERTYPE_ISI = ISI
 ENUM_IDENTIFIERTYPE_ISSN = ISSN
 
 ENUM_IDENTIFIERTYPE_OTHER = Other
+
+ENUM_IDENTIFIERTYPE_PATENT_APPLICATION_NUMBER = Patent  Application Number
+
+ENUM_IDENTIFIERTYPE_PATENT_NUMBER = Patent Number
+
+ENUM_IDENTIFIERTYPE_PATENT_PUBLICATION_NUMBER = Patent Publication Number
 
 ENUM_IDENTIFIERTYPE_PII = PII
 
@@ -1755,6 +1767,8 @@ adv_search_lblChkGenre_other = Other
 
 adv_search_lblChkGenre_paper = Working Paper
 
+adv_search_lblChkGenre_patent = Patent
+
 adv_search_lblChkGenre_poster = Poster
 
 adv_search_lblChkGenre_proceedings = Proceedings
@@ -2137,6 +2151,14 @@ g_source_identifiers = Identifier
 g_source_volume_issue_pages = Details of Source
 
 g_sources = Source
+
+genre_patent_application_date = Application Date
+
+genre_patent_authority_code = Authority Code
+
+genre_patent_authority_place = Authority Place
+
+genre_patent_publication_date = Publication Date
 
 import_workspace_actions = Actions
 
