--- a/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
@@ -252,9 +252,10 @@ ENUM_INVITATIONSTATUS_INVITED = Invited
 
 ENUM_LANGUAGE_DE = German
 
+#
+# HomePage
+#
 ENUM_LANGUAGE_EN = English
-
-ENUM_LANGUAGE_JA = Japanese
 
 ENUM_LANGUAGE_ES = Spanish
 
@@ -1491,6 +1492,8 @@ adv_search_lblChkGenre_opinion = Opinion
 adv_search_lblChkGenre_other = Other
 
 adv_search_lblChkGenre_paper = Working Paper
+
+adv_search_lblChkGenre_patent = Patent
 
 adv_search_lblChkGenre_poster = Poster
 
