--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -214,6 +214,8 @@ ENUM_CONTENTCATEGORY_table-of-contents = \u76EE\u6B21
 
 ENUM_CREATORROLE_ADVISOR = \u5B66\u4F4D\u8AD6\u6587\u4E3B\u67FB
 
+ENUM_CREATORROLE_APPLICANT = \u51FA\u9858\u4EBA
+
 ENUM_CREATORROLE_ARTIST = \u30A2\u30FC\u30C6\u30A3\u30B9\u30C8
 
 ENUM_CREATORROLE_AUTHOR = \u8457\u8005
@@ -227,6 +229,8 @@ ENUM_CREATORROLE_EDITOR = \u7DE8\u96C6\u8005
 ENUM_CREATORROLE_HONOREE = \u5BC4\u8D08\u8005
 
 ENUM_CREATORROLE_ILLUSTRATOR = \u30A4\u30E9\u30B9\u30C8\u30EC\u30FC\u30BF
+
+ENUM_CREATORROLE_INVENTOR = \u767A\u660E\u8005
 
 ENUM_CREATORROLE_PAINTER = \u30DA\u30A4\u30F3\u30BF\u30FC
 
@@ -353,6 +357,8 @@ ENUM_GENRE_OTHER = \u305D\u306E\u4ED6
 
 ENUM_GENRE_PAPER = \u6210\u679C\u5831\u544A\u66F8
 
+ENUM_GENRE_PATENT = \u7279\u8A31
+
 ENUM_GENRE_POSTER = \u30DD\u30B9\u30BF\u30FC
 
 ENUM_GENRE_PROCEEDINGS = \u4F1A\u8B70\u8AD6\u6587\u96C6
@@ -390,6 +396,12 @@ ENUM_IDENTIFIERTYPE_ISI = ISI
 ENUM_IDENTIFIERTYPE_ISSN = ISSN
 
 ENUM_IDENTIFIERTYPE_OTHER = \u305D\u306E\u4ED6
+
+ENUM_IDENTIFIERTYPE_PATENT_APPLICATION_NUMBER = Patent  Application Number
+
+ENUM_IDENTIFIERTYPE_PATENT_NUMBER = \u7279\u8A31\u756A\u53F7
+
+ENUM_IDENTIFIERTYPE_PATENT_PUBLICATION_NUMBER = Patent Publication Numbers
 
 ENUM_IDENTIFIERTYPE_PII = PII
 
@@ -1732,6 +1744,8 @@ adv_search_lblChkGenre_other = \u305D\u306E\u4ED6
 
 adv_search_lblChkGenre_paper = \u6210\u679C\u5831\u544A\u66F8
 
+adv_search_lblChkGenre_patent = \u7279\u8A31
+
 adv_search_lblChkGenre_poster = \u30DD\u30B9\u30BF\u30FC
 
 adv_search_lblChkGenre_proceedings = \u4F1A\u8B70\u8AD6\u6587\u96C6
@@ -2105,6 +2119,14 @@ g_source_identifiers = \u8B58\u5225\u5B50\uFF08ISBN, ISSN, DOI\u306A\u3069\uFF09
 g_source_volume_issue_pages = \u51FA\u7248\u7269\u306E\u8A73\u7D30
 
 g_sources = \u51FA\u7248\u7269
+
+genre_patent_application_date = \u51FA\u9858\u65E5
+
+genre_patent_authority_code = \u6A29\u9650\u30B3\u30FC\u30C9
+
+genre_patent_authority_place = \u6A29\u9650\u306E\u5834\u6240
+
+genre_patent_publication_date = \u520A\u884C\u65E5
 
 import_workspace_actions = \u51E6\u7406
 
