--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -1439,9 +1439,9 @@ adv_search_lblChkGenre_article = Zeitschriftenartikel
 
 adv_search_lblChkGenre_book = Buch
 
-adv_search_lblChkGenre_bookreview = Rezension
-
 adv_search_lblChkGenre_bookitem = Buchkapitel
+
+adv_search_lblChkGenre_bookreview = Rezension
 
 adv_search_lblChkGenre_casenote = Entscheidungsanmerkung
 
@@ -1455,15 +1455,15 @@ adv_search_lblChkGenre_conferencepap = Konferenzbeitrag
 
 adv_search_lblChkGenre_conferencerep = Konferenzbericht
 
-adv_search_lblChkGenre_contrcolled =  Beitrag in Sammelwerk 
+adv_search_lblChkGenre_contrcolled = Beitrag in Sammelwerk 
 
 adv_search_lblChkGenre_contrcommentary = Beitrag in Kommentar 
-
-adv_search_lblChkGenre_contrlexikon = Beitrag in Lexikon 
 
 adv_search_lblChkGenre_contrfestschrift = Beitrag in Festschrift 
 
 adv_search_lblChkGenre_contrhandbook = Beitrag in Handbuch 
+
+adv_search_lblChkGenre_contrlexikon = Beitrag in Lexikon 
 
 adv_search_lblChkGenre_courseware = Lehrmaterial
 
@@ -1488,6 +1488,8 @@ adv_search_lblChkGenre_opinion = Stellungnahme
 adv_search_lblChkGenre_other = Sonstige
 
 adv_search_lblChkGenre_paper = Forschungspapier
+
+adv_search_lblChkGenre_patent = Patent
 
 adv_search_lblChkGenre_poster = Poster
 
