--- a/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
@@ -1441,9 +1441,9 @@ adv_search_lblChkGenre_article = Journal Article
 
 adv_search_lblChkGenre_book = Book
 
-adv_search_lblChkGenre_bookreview = Book Review
-
 adv_search_lblChkGenre_bookitem = Book Chapter
+
+adv_search_lblChkGenre_bookreview = Book Review
 
 adv_search_lblChkGenre_casenote = Case Note
 
@@ -1457,15 +1457,15 @@ adv_search_lblChkGenre_conferencepap = Conference Paper
 
 adv_search_lblChkGenre_conferencerep = Conference Report
 
-adv_search_lblChkGenre_contrcolled =  Contr. to Collected Edition 
+adv_search_lblChkGenre_contrcolled = Contr. to Collected Edition 
 
 adv_search_lblChkGenre_contrcommentary = Contr. to Commentary 
-
-adv_search_lblChkGenre_contrlexikon = Contr. to Encyclopedia 
 
 adv_search_lblChkGenre_contrfestschrift = Contr. to Festschrift 
 
 adv_search_lblChkGenre_contrhandbook = Contr. to Handbook 
+
+adv_search_lblChkGenre_contrlexikon = Contr. to Encyclopedia 
 
 adv_search_lblChkGenre_courseware = Teaching
 
@@ -1491,6 +1491,8 @@ adv_search_lblChkGenre_other = Other
 
 adv_search_lblChkGenre_paper = Working Paper
 
+adv_search_lblChkGenre_patent = \u7279\u8A31
+
 adv_search_lblChkGenre_poster = Poster
 
 adv_search_lblChkGenre_proceedings = Proceedings
@@ -1502,7 +1504,6 @@ adv_search_lblChkGenre_series = Series
 adv_search_lblChkGenre_talkatevent = Talk
 
 adv_search_lblChkGenre_thesis = Thesis
-
 
 adv_search_lblChkInclude = Include Files
 
@@ -1950,7 +1951,7 @@ search_lblAdvancedSearch_noresults = Advanced Search
 #
 search_lblIncludeFiles = Include files
 
-search_lblSearch = Search released items	
+search_lblSearch = Search released items\u0009
 
 search_start = \u691C\u7D22\u3092\u958B\u59CB\u3059\u308B
 
