Former-commit-id: a062c255b8680685a5fb2684538809412e95e4cf

--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -214,6 +214,8 @@ ENUM_CONTENTCATEGORY_table-of-contents = \u00CDndice de contenidos
 
 ENUM_CREATORROLE_ADVISOR = Asesor 
 
+ENUM_CREATORROLE_APPLICANT = Demandante
+
 ENUM_CREATORROLE_ARTIST = Artista 
 
 ENUM_CREATORROLE_AUTHOR = Autor 
@@ -227,6 +229,8 @@ ENUM_CREATORROLE_EDITOR = Editor
 ENUM_CREATORROLE_HONOREE = Homenajeado <G/>
 
 ENUM_CREATORROLE_ILLUSTRATOR = Ilustrador
+
+ENUM_CREATORROLE_INVENTOR = Inventor
 
 ENUM_CREATORROLE_PAINTER = Pintor
 
@@ -353,6 +357,8 @@ ENUM_GENRE_OTHER = Otro
 
 ENUM_GENRE_PAPER = Caso de empresa - versi\u00F3n alumno
 
+ENUM_GENRE_PATENT = Patente
+
 ENUM_GENRE_POSTER = Caso de empresa
 
 ENUM_GENRE_PROCEEDINGS = Actas
@@ -388,6 +394,12 @@ ENUM_IDENTIFIERTYPE_ISI = ISI
 ENUM_IDENTIFIERTYPE_ISSN = ISSN
 
 ENUM_IDENTIFIERTYPE_OTHER = Otro
+
+ENUM_IDENTIFIERTYPE_PATENT_APPLICATION_NUMBER = N\u00FAmero de Patente
+
+ENUM_IDENTIFIERTYPE_PATENT_NUMBER = Patent Number
+
+ENUM_IDENTIFIERTYPE_PATENT_PUBLICATION_NUMBER = Patent Publication Number
 
 ENUM_IDENTIFIERTYPE_PII = PII
 
@@ -2076,6 +2088,14 @@ g_source_identifiers = Identificador
 g_source_volume_issue_pages = Detalles de la Fuente
 
 g_sources = Fuente
+
+genre_patent_application_date = Application Date
+
+genre_patent_authority_code = Authority Code
+
+genre_patent_authority_place = Authority Place
+
+genre_patent_publication_date = Publication Date
 
 import_workspace_actions = Acciones
 
