Added patent genre and new creator roles
Former-commit-id: 74da6babaa30821e13dbedb6c974a11379eb718c

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -417,11 +417,11 @@ ENUM_IDENTIFIERTYPE_ISSN = ISSN
 
 ENUM_IDENTIFIERTYPE_OTHER = Anderer
 
-ENUM_IDENTIFIERTYPE_PATENT_APPLICATION_NUMBER = Patentantragsnummer
+ENUM_IDENTIFIERTYPE_PATENT_APPLICATION_NR = Patentantragsnr.
 
-ENUM_IDENTIFIERTYPE_PATENT_NUMBER = Patentnummer
+ENUM_IDENTIFIERTYPE_PATENT_NR = Patentnr.
 
-ENUM_IDENTIFIERTYPE_PATENT_PUBLICATION_NUMBER = Patentpublikationsnummer
+ENUM_IDENTIFIERTYPE_PATENT_PUBLICATION_NR = Patentpublikationsnr.
 
 ENUM_IDENTIFIERTYPE_PII = PII
 
