--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -416,11 +416,11 @@ ENUM_IDENTIFIERTYPE_ISSN = ISSN
 
 ENUM_IDENTIFIERTYPE_OTHER = Other
 
-ENUM_IDENTIFIERTYPE_PATENT_APPLICATION_NUMBER = Patent  Application Number
+ENUM_IDENTIFIERTYPE_PATENT_APPLICATION_NR = Patent  Application Nr.
 
-ENUM_IDENTIFIERTYPE_PATENT_NUMBER = Patent Number
+ENUM_IDENTIFIERTYPE_PATENT_NR = Patent Nr.
 
-ENUM_IDENTIFIERTYPE_PATENT_PUBLICATION_NUMBER = Patent Publication Number
+ENUM_IDENTIFIERTYPE_PATENT_PUBLICATION_NR = Patent Publication Nr.
 
 ENUM_IDENTIFIERTYPE_PII = PII
 
