--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -395,11 +395,11 @@ ENUM_IDENTIFIERTYPE_ISSN = ISSN
 
 ENUM_IDENTIFIERTYPE_OTHER = Otro
 
-ENUM_IDENTIFIERTYPE_PATENT_APPLICATION_NUMBER = N\u00FAmero de Patente
+ENUM_IDENTIFIERTYPE_PATENT_APPLICATION_NR = Nr. de Patente
 
-ENUM_IDENTIFIERTYPE_PATENT_NUMBER = Patent Number
+ENUM_IDENTIFIERTYPE_PATENT_NR = Patent Nr.
 
-ENUM_IDENTIFIERTYPE_PATENT_PUBLICATION_NUMBER = Patent Publication Number
+ENUM_IDENTIFIERTYPE_PATENT_PUBLICATION_NR = Patent Publication Nr.
 
 ENUM_IDENTIFIERTYPE_PII = PII
 
