--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -397,11 +397,11 @@ ENUM_IDENTIFIERTYPE_ISSN = ISSN
 
 ENUM_IDENTIFIERTYPE_OTHER = \u305D\u306E\u4ED6
 
-ENUM_IDENTIFIERTYPE_PATENT_APPLICATION_NUMBER = Patent  Application Number
+ENUM_IDENTIFIERTYPE_PATENT_APPLICATION_NR = Patent Application Nr.
 
-ENUM_IDENTIFIERTYPE_PATENT_NUMBER = \u7279\u8A31\u756A\u53F7
+ENUM_IDENTIFIERTYPE_PATENT_NR = \u7279\u8A31\u756A\u53F7
 
-ENUM_IDENTIFIERTYPE_PATENT_PUBLICATION_NUMBER = Patent Publication Numbers
+ENUM_IDENTIFIERTYPE_PATENT_PUBLICATION_NR = Patent Publication Nr.
 
 ENUM_IDENTIFIERTYPE_PII = PII
 
