--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -445,11 +445,11 @@ import_process_started = Importprozess ist gestartet
 
 import_process_submit_failed = Das Einstellen ist fehlgeschlagen
 
-import_process_submit_finished = Das Einstellen ist nun abgeschlossen
+import_process_submit_finished = Das Freigeben ist nun abgeschlossen
 
 import_process_submit_item = Einstellen des Datensatzes
 
-import_process_submit_items = Alle Datens\u00E4tze einstellen
+import_process_submit_items = Alle Datens\u00E4tze freigeben
 
 import_process_submit_release_item = Einstellen und Freischalten des Datensatzes
 
