--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -454,11 +454,11 @@ import_process_started = Import process started
 
 import_process_submit_failed = Submission failed
 
-import_process_submit_finished = Submission finished
+import_process_submit_finished = Release finished
 
 import_process_submit_item = Submitting item
 
-import_process_submit_items = Submitting all items
+import_process_submit_items = Releasing all items
 
 import_process_submit_release_item = Submitting and releasing item
 
