--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -416,7 +416,7 @@ import_process_submit_finished = Env\u00EDo finalizado
 
 import_process_submit_item = Enviando item
 
-import_process_submit_items = Enviando todos los items
+import_process_submit_items = Publicando todos los items
 
 import_process_submit_release_item = Enviando y publicando item
 
