harmonized wording (licence -> license)
Former-commit-id: 80fd3d8cd845e1fd251086ca79ee3a36c879f4e6

--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -2010,7 +2010,7 @@ easy_submission_lblImportReferences = Import references in a structured format f
 
 easy_submission_lblKeywords = Free Keywords
 
-easy_submission_lblLicencingInfo = Licence
+easy_submission_lblLicencingInfo = License
 
 easy_submission_lblLocator = Locator
 
