--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -82,7 +82,7 @@ ErrorInOrganizationAssignment = An unexpected error occured while assigning affi
 
 ErrorParsingCreatorString = The given creator string is empty or couldn't be parsed correctly.
 
-EventNotProvided = If genre is equal to "Proceedings", "Proceedings Paper", "Talk at event", "Conference Report" or "Teaching", an event has to be provided.
+EventNotProvided = If genre is equal to "Proceedings", "Conference Paper", "Talk at event", "Conference Report" or "Teaching", an event has to be provided.
 
 EventTitleNotProvided = If event data are entered, an event title has to be given, too.
 
@@ -138,7 +138,7 @@ SourceCreatorRoleNotProvided = The role of a creator of a source is not provided
 
 SourceGenreNotProvided = If a source title was entered, a source genre has to be entered, too.
 
-SourceNotProvided = If genre is equal to "Journal Article", "Book Chapter" or "Proceedings Paper" at least one source has to be provided.
+SourceNotProvided = If genre is equal to "Journal Article", "Book Chapter" or "Conference Paper" at least one source has to be provided.
 
 SourceTitleNotProvided = Source information was entered without a source title.
 
