--- a/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
@@ -200,7 +200,7 @@ ENUM_GENRE_BOOK = Book
 
 ENUM_GENRE_BOOK_ITEM = Book Chapter
 
-ENUM_GENRE_CONFERENCE_PAPER = Proceedings Paper
+ENUM_GENRE_CONFERENCE_PAPER = Conference Paper
 
 ENUM_GENRE_CONFERENCE_REPORT = Conference report
 
