--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -397,11 +397,11 @@ ENUM_IDENTIFIERTYPE_ISSN = ISSN
 
 ENUM_IDENTIFIERTYPE_OTHER = \u305D\u306E\u4ED6
 
-ENUM_IDENTIFIERTYPE_PATENT_APPLICATION_NR = Patent Application Nr.
+ENUM_IDENTIFIERTYPE_PATENT_APPLICATION_NR = \u7279\u8a31\u516c\u958b\u756a\u53f7
 
 ENUM_IDENTIFIERTYPE_PATENT_NR = \u7279\u8A31\u756A\u53F7
 
-ENUM_IDENTIFIERTYPE_PATENT_PUBLICATION_NR = Patent Publication Nr.
+ENUM_IDENTIFIERTYPE_PATENT_PUBLICATION_NR = \u7279\u8a31\u767b\u9332\u756a\u53f7
 
 ENUM_IDENTIFIERTYPE_PII = PII
 
