add one translate
Former-commit-id: 863d0006e0bf8be4d5362a918f76be2cd7abf30d

--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -2319,7 +2319,7 @@ qaws_lblCollectionSelection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3
 
 qaws_lblItemStateSelection = \u767B\u9332\u72B6\u6CC1
 
-qaws_lblLoading = loading
+qaws_lblLoading = \u30ed\u30fc\u30c9\u4e2d
 
 qaws_lblMultipleImportTags = \u4E00\u62EC\u767B\u9332\u540D
 
