add translation for Export_FileFormat_HTML_LINKED
Former-commit-id: a1d160875317fe1d614c597bdca3ba4fba945ab4

--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -771,7 +771,7 @@ Export_ExportFormat_XML = xml
 
 Export_FileFormat_ESCIDOC_SNIPPET = \u5F15\u7528\u5F62\u5F0F\u4ED8\u304DXML 
 
-Export_FileFormat_HTML_LINKED = html (linked)
+Export_FileFormat_HTML_LINKED = html (\u30ea\u30f3\u30af\u4ed8\u304d)
 
 Export_FileFormat_HTML_PLAIN = html (\u30B7\u30F3\u30D7\u30EB)
 
