some labels edited
Former-commit-id: 622011fd2132fe0cc9a5e4666a154d21ca480d2a

--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -111,29 +111,29 @@ Basket_lblRemoveSelected = ELIMINAR DE LA CESTA
 #
 BreadCrumb_info = Acciones:
 
-BrowseByChooseInitial = Elegir letra inicial <G/>
+BrowseByChooseInitial = Elegir letra inicial 
 
-BrowseByChooseYear = Elegir a\u00F1o <G/>
+BrowseByChooseYear = Elegir a\u00F1o 
 
-BrowseByCreator = Las personas <G/>
+BrowseByCreator = Autores 
 
-BrowseByCreatorDesc = B\u00FAsqueda por los nombres de persona y ver los elementos correspondientes. <G/>
+BrowseByCreatorDesc = B\u00FAsqueda por el nombre del autor.
 
-BrowseByInitial = Letra inicial: <G/>
+BrowseByInitial = Letra inicial: 
 
-BrowseByOrg = Organizaciones <G/>
+BrowseByOrg = Organizaciones 
 
-BrowseByOrgDesc = B\u00FAsqueda por nombres de las unidades de organizaci\u00F3n y ver los elementos correspondientes. <G/>
+BrowseByOrgDesc = B\u00FAsqueda por el nombre de las unidades de organizaci\u00F3n.
 
-BrowseByPage = Browse
+BrowseByPage = Categor\u00EDas 
 
-BrowseBySelect = Elegir Browse By <G/>
+BrowseBySelect = Elegir categor\u00EDa 
 
-BrowseBySubject = Etiquetas <G/>
+BrowseBySubject = Clasificaci\u00F3n por temas 
 
-BrowseByYear = Browse By A\u00F1o <G/>
+BrowseByYear = Browse By A\u00F1o 
 
-BrowseByYearDesc = B\u00FAsqueda por a\u00F1o y ver los elementos correspondientes. <G/>
+BrowseByYearDesc = B\u00FAsqueda por a\u00F1o.
 
 #
 #CartItemsPage
@@ -172,7 +172,7 @@ DepositorWSPage = Mis Items
 # ExportItems
 DisplayExportItemsPage = Exportar Lista de Items
 
-ENUM_ALTERNATIVETITLETYPE_ABBREVIATION = T\u00EDtulo Abreviado <G/>
+ENUM_ALTERNATIVETITLETYPE_ABBREVIATION = T\u00EDtulo abreviado 
 
 ENUM_ALTERNATIVETITLETYPE_OTHER = Otro
 
@@ -226,7 +226,7 @@ ENUM_CREATORROLE_CONTRIBUTOR = Colaborador
 
 ENUM_CREATORROLE_EDITOR = Editor
 
-ENUM_CREATORROLE_HONOREE = Homenajeado <G/>
+ENUM_CREATORROLE_HONOREE = Homenajeado
 
 ENUM_CREATORROLE_ILLUSTRATOR = Ilustrador
 
@@ -301,57 +301,57 @@ ENUM_GENRE_BOOK = Libro
 
 ENUM_GENRE_BOOK_ITEM = Documento presentaci\u00F3n
 
-ENUM_GENRE_BOOK_REVIEW = Recensi\u00F3n <G/>
+ENUM_GENRE_BOOK_REVIEW = Recensi\u00F3n de libro 
 
-ENUM_GENRE_CASE_NOTE = Decisi\u00F3n Nota <G/>
+ENUM_GENRE_CASE_NOTE = Comentario a Sentencia 
 
-ENUM_GENRE_CASE_STUDY = Estudio de caso <G/>
+ENUM_GENRE_CASE_STUDY = Estudio de Caso 
 
-ENUM_GENRE_COLLECTED_EDITION = Recogido Edici\u00F3n <G/>
+ENUM_GENRE_COLLECTED_EDITION = Obra Colectiva 
 
-ENUM_GENRE_COMMENTARY = Comentario <G/>
+ENUM_GENRE_COMMENTARY = Comentario 
 
 ENUM_GENRE_CONFERENCE_PAPER = Presentaciones a Congresos 
 
 ENUM_GENRE_CONFERENCE_REPORT = Informe de Conferencia
 
-ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Contribuci\u00F3n a una Recogido Edici\u00F3n <G/>
+ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Contribuci\u00F3n en Obra Colectiva 
 
-ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Contribuci\u00F3n a un Comentario <G/>
+ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Contribuci\u00F3n en Comentario 
 
-ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Contribuci\u00F3n a una Enciclopedia
+ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Contribuci\u00F3n en Enciclopedia
 
-ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Contribuci\u00F3n a una Festschrift <G/>
+ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Contribuci\u00F3n en Festschrift 
 
-ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Contribuci\u00F3n a un Manual <G/>
+ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Contribuci\u00F3n en Manual 
 
 ENUM_GENRE_COURSEWARE_LECTURE = Documento docente
 
-ENUM_GENRE_EDITORIAL = Editorial <G/>
+ENUM_GENRE_EDITORIAL = Editorial
 
-ENUM_GENRE_ENCYCLOPEDIA = Enciclopedia <G/>
+ENUM_GENRE_ENCYCLOPEDIA = Enciclopedia 
 
-ENUM_GENRE_FESTSCHRIFT = Festschrift <G/>
+ENUM_GENRE_FESTSCHRIFT = Festschrift 
 
-ENUM_GENRE_HANDBOOK = Manual <G/>
+ENUM_GENRE_HANDBOOK = Manual 
 
 ENUM_GENRE_ISSUE = N\u00FAmero especial 
 
 ENUM_GENRE_JOURNAL = Revista
 
-ENUM_GENRE_MANUAL = Gu\u00EDa <G/>
+ENUM_GENRE_MANUAL = Gu\u00EDa 
 
-ENUM_GENRE_MANUSCRIPT = Caso de empresa - versi\u00F3n profesor
+ENUM_GENRE_MANUSCRIPT = Manuscrito
 
-ENUM_GENRE_MONOGRAPH = Monograf\u00EDa <G/>
+ENUM_GENRE_MONOGRAPH = Monograf\u00EDa 
 
-ENUM_GENRE_MULTI_VOLUME = Multi-Volumen  <G/>
+ENUM_GENRE_MULTI_VOLUME = Multi Volumen  
 
-ENUM_GENRE_NEWSPAPER = Peri\u00F3dico <G/>
+ENUM_GENRE_NEWSPAPER = Peri\u00F3dico 
 
 ENUM_GENRE_NEWSPAPER_ARTICLE = Art\u00EDculo de peri\u00F3dico
 
-ENUM_GENRE_OPINION = Opini\u00F3n <G/>
+ENUM_GENRE_OPINION = Opini\u00F3n 
 
 ENUM_GENRE_OTHER = Otro
 
@@ -371,9 +371,9 @@ ENUM_GENRE_TALK_AT_EVENT = Charla
 
 ENUM_GENRE_THESIS = Tesis
 
-ENUM_GENRE_WEB_PAGE = P\u00E1gina Web <G/>
+ENUM_GENRE_WEB_PAGE = P\u00E1gina Web 
 
-ENUM_GENRE_WORKING_PAPER = Documento de Trabajo <G/>
+ENUM_GENRE_WORKING_PAPER = Documento de Trabajo  
 
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
@@ -499,7 +499,7 @@ ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = con fichero(s)
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = con fichero(s)
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = con localizadores <G/>
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = con localizadores 
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_NO_COMPONENTS = sin fichero (s)
 
@@ -585,9 +585,9 @@ EditItem_btUpload = cargar
 
 EditItem_btUploadLocator = Cargar fichero enlazado
 
-EditItem_btUpload_File = Subir archivo <G/>
+EditItem_btUpload_File = Subir archivo 
 
-EditItem_btUpload_URL = Subir desde URL <G/>
+EditItem_btUpload_URL = Subir desde URL 
 
 EditItem_btnAddAuthors = A\u00F1adir autores
 
@@ -601,13 +601,13 @@ EditItem_lblAbstract = Resumen
 
 EditItem_lblAddCreator = A\u00F1adir Creador Personas/Organizaciones
 
-EditItem_lblAddRemove = Agregar o quitar <G/>
+EditItem_lblAddRemove = Agregar o quitar 
 
 EditItem_lblAlternativeTitel = T\u00EDtulo alternativo
 
 EditItem_lblBasic = B\u00E1sico
 
-EditItem_lblClassifiedSubject = Clasificado Asunto <G/>
+EditItem_lblClassifiedSubject = Asunto clasificado 
 
 EditItem_lblCollection = Colecci\u00F3n
 
@@ -661,7 +661,7 @@ EditItem_lblFileEmbargo = embargado hasta
 
 EditItem_lblFileProperties = Propiedades
 
-EditItem_lblFileURL = Archivo URL <G/>
+EditItem_lblFileURL = Archivo URL 
 
 EditItem_lblGenre = G\u00E9nero
 
@@ -729,7 +729,7 @@ EditItem_lnkSave = Guardar
 
 EditItem_lnkSaveAndSubmit = Enviar
 
-EditItem_lnkSaveURL = Guardar URL <G/>
+EditItem_lnkSaveURL = Guardar URL
 
 EditItem_lnkValidate = Validar
 
@@ -782,11 +782,11 @@ Export_FileFormat_ESCIDOC_SNIPPET = eSciDoc Snippet
 
 Export_FileFormat_HTML = HTML
 
-Export_FileFormat_HTML_LINKED = html (vinculado) <G/>
+Export_FileFormat_HTML_LINKED = html (vinculado) 
 
-Export_FileFormat_HTML_PLAIN = html (sin formato) <G/>
+Export_FileFormat_HTML_PLAIN = html (sin formato) 
 
-Export_FileFormat_HTML_STYLED = html (formato) <G/>
+Export_FileFormat_HTML_STYLED = html (con formato) 
 
 Export_FileFormat_ODT = ODT
 
@@ -822,9 +822,9 @@ Home_Header_News = \u00DAltimas noticias sobre Pubman
 
 Home_Header_News_Disabled = Noticias deshabilitadas por entorno no productivo
 
-Home_Link_EasySub = F\u00E1cil entrada <G/>
+Home_Link_EasySub = Entrada r\u00E1pida 
 
-Home_Link_FullSub = Entrada completa <G/>
+Home_Link_FullSub = Entrada completa 
 
 #
 # HomePage
@@ -854,7 +854,7 @@ ItemList_SortOrderDescending = descendente
 
 ItemList_Total = Total:
 
-ItemList_filterAllExceptPendingWithdrawn = Todos (excepto los pendientes y los retirados) <G/>
+ItemList_filterAllExceptPendingWithdrawn = Todos (excepto los pendientes y los retirados)
 
 ItemList_filterAllExceptWithdrawn = Todos (excepto los retirados)
 
@@ -971,7 +971,7 @@ SearchResultList_lblSortedBy = ordenados por
 
 Search_lblShowHide = mostrar/ocultar
 
-ShowQuery = Mostrar consulta de b\u00FAsqueda <G/>
+ShowQuery = Mostrar consulta de b\u00FAsqueda 
 
 #
 # Submission
@@ -1023,7 +1023,7 @@ ViewItemFull_btnItemView = Vista
 
 ViewItemFull_lblAbstract = Resumen
 
-ViewItemFull_lblAbstractLanguage = Idioma del resumen <G/>
+ViewItemFull_lblAbstractLanguage = Idioma del resumen 
 
 ViewItemFull_lblAddToBasket = A\u00F1adir a la cesta
 
@@ -1125,13 +1125,13 @@ ViewItemFull_lblLanguages = Lenguas(s)
 
 ViewItemFull_lblLastModified = \u00DAltima modificaci\u00F3n
 
-ViewItemFull_lblLegalCaseCourtName = Corte <G/>
+ViewItemFull_lblLegalCaseCourtName = Corte 
 
-ViewItemFull_lblLegalCaseCourtNameIdDate = Corte, fecha, n\u00BA caso de referencia <G/>
+ViewItemFull_lblLegalCaseCourtNameIdDate = Corte, fecha, N\u00FAmero de registro
 
-ViewItemFull_lblLegalCaseDatePublished = Fecha <G/>
+ViewItemFull_lblLegalCaseDatePublished = Fecha 
 
-ViewItemFull_lblLegalCaseIdentifier = Aktenzeichen <G/>
+ViewItemFull_lblLegalCaseIdentifier = N\u00FAmero de registro
 
 ViewItemFull_lblLegalCaseTitle = T\u00EDtulo
 
@@ -1163,9 +1163,9 @@ ViewItemFull_lblRemoveFromBasket = Eliminar de la Cesta
 
 ViewItemFull_lblRevisionMethod = M\u00E9todo de Rev.
 
-ViewItemFull_lblRollback = Revertir <G/>
+ViewItemFull_lblRollback = Revertir 
 
-ViewItemFull_lblRollbackConfirm = \u00BFUsted realmente desea reemplazar los datos existentes con esta versi\u00F3n? <G/>
+ViewItemFull_lblRollbackConfirm = Realmente desea reemplazar los datos existentes con esta versi\u00F3n? 
 
 ViewItemFull_lblShowGroup = mostrar
 
