--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -348,7 +348,7 @@ import_process_initialization_failed = Ha fallado la Inicializaci\u00F3n
 
 import_process_initialize = Inicializando
 
-import_process_initialize_delete_process = Inicializando el proceso de eliminaci\u00F3n <G/>
+import_process_initialize_delete_process = Iniciando el proceso de eliminaci\u00F3n
 
 import_process_initialize_delete_process_error = Se ha producido un error mientras se inicializaba el proceso de eliminaci\u00F3n
 
