Former-commit-id: 7b41ab7e6e1fd08a946d24f6a053a7b99074335b

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1135,6 +1135,8 @@ ViewItemFull_lblLanguages = Sprache(n)
 
 ViewItemFull_lblLastModified = Zuletzt ge\u00E4ndert
 
+ViewItemFull_lblLatestVersion = Neueste Version
+
 ViewItemFull_lblLegalCaseCourtName = Gericht
 
 ViewItemFull_lblLegalCaseCourtNameIdDate = Gericht, Datum, AZ
