--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1134,6 +1134,8 @@ ViewItemFull_lblLanguages = Language(s)
 
 ViewItemFull_lblLastModified = Last modified
 
+ViewItemFull_lblLatestVersion = Latest Version
+
 ViewItemFull_lblLegalCaseCourtName = Court
 
 ViewItemFull_lblLegalCaseCourtNameIdDate = Court, Date, Case Reference Nr
