--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -1125,6 +1125,8 @@ ViewItemFull_lblLanguages = Lenguas(s)
 
 ViewItemFull_lblLastModified = \u00DAltima modificaci\u00F3n
 
+ViewItemFull_lblLatestVersion = Latest Version
+
 ViewItemFull_lblLegalCaseCourtName = Corte 
 
 ViewItemFull_lblLegalCaseCourtNameIdDate = Corte, fecha, N\u00FAmero de registro
