--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -397,11 +397,11 @@ ENUM_IDENTIFIERTYPE_ISSN = ISSN
 
 ENUM_IDENTIFIERTYPE_OTHER = \u305D\u306E\u4ED6
 
-ENUM_IDENTIFIERTYPE_PATENT_APPLICATION_NR = \u7279\u8a31\u516c\u958b\u756a\u53f7
+ENUM_IDENTIFIERTYPE_PATENT_APPLICATION_NR = \u7279\u8A31\u516C\u958B\u756A\u53F7
 
 ENUM_IDENTIFIERTYPE_PATENT_NR = \u7279\u8A31\u756A\u53F7
 
-ENUM_IDENTIFIERTYPE_PATENT_PUBLICATION_NR = \u7279\u8a31\u767b\u9332\u756a\u53f7
+ENUM_IDENTIFIERTYPE_PATENT_PUBLICATION_NR = \u7279\u8A31\u767B\u9332\u756A\u53F7
 
 ENUM_IDENTIFIERTYPE_PII = PII
 
@@ -771,7 +771,7 @@ Export_ExportFormat_XML = xml
 
 Export_FileFormat_ESCIDOC_SNIPPET = \u5F15\u7528\u5F62\u5F0F\u4ED8\u304DXML 
 
-Export_FileFormat_HTML_LINKED = html (\u30ea\u30f3\u30af\u4ed8\u304d)
+Export_FileFormat_HTML_LINKED = html (\u30EA\u30F3\u30AF\u4ED8\u304D)
 
 Export_FileFormat_HTML_PLAIN = html (\u30B7\u30F3\u30D7\u30EB)
 
@@ -1113,6 +1113,8 @@ ViewItemFull_lblLanguage = \u8A00\u8A9E
 ViewItemFull_lblLanguages = \u8A00\u8A9E
 
 ViewItemFull_lblLastModified = \u6700\u7D42\u66F4\u65B0
+
+ViewItemFull_lblLatestVersion = Latest Version
 
 ViewItemFull_lblLegalCaseCourtName = \u88C1\u5224\u6240\u540D
 
@@ -2319,7 +2321,7 @@ qaws_lblCollectionSelection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3
 
 qaws_lblItemStateSelection = \u767B\u9332\u72B6\u6CC1
 
-qaws_lblLoading = \u30ed\u30fc\u30c9\u4e2d
+qaws_lblLoading = \u30ED\u30FC\u30C9\u4E2D
 
 qaws_lblMultipleImportTags = \u4E00\u62EC\u767B\u9332\u540D
 
