PUBMAN-1793 implemented: BibTeX Citekeys in MD as Identifier
Former-commit-id: e49ec5bce03e65a78929b6fe9ddb2bf31e05d67d

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -399,6 +399,8 @@ ENUM_IDENTIFIERTYPE_ = n.a.
 #Jus-specific Publication types END
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
+ENUM_IDENTIFIERTYPE_BIBTEX_CITEKEY = BibTex Citekey
+
 ENUM_IDENTIFIERTYPE_BMC = BMC
 
 ENUM_IDENTIFIERTYPE_CONE = CoNE
