--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -377,6 +377,8 @@ ENUM_GENRE_WORKING_PAPER = Documento de Trabajo
 
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
+ENUM_IDENTIFIERTYPE_BIBTEX_CITEKEY = BibTex Citekey
+
 ENUM_IDENTIFIERTYPE_BMC = BMC
 
 ENUM_IDENTIFIERTYPE_CONE = CoNE
