--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -379,6 +379,8 @@ ENUM_IDENTIFIERTYPE_ = \u8A72\u5F53\u306A\u3057
 
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
+ENUM_IDENTIFIERTYPE_BIBTEX_CITEKEY = BibTex Citekey
+
 ENUM_IDENTIFIERTYPE_BMC = BMC
 
 ENUM_IDENTIFIERTYPE_CONE = CoNE
