PUBMAN-1663 implemented: Linguistic Literature: Extend search result list
Former-commit-id: 16f77dc98d01d6f660f6aa5511705a2721832cc3

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -270,6 +270,8 @@ ENUM_CRITERIA_OWNER = Name des Besitzers
 
 ENUM_CRITERIA_PUBLISHING_INFO = Verlag, Ort, Ausgabe
 
+ENUM_CRITERIA_RELEVANCE = Relevanz
+
 ENUM_CRITERIA_REVIEW_METHOD = Art der Begutachtung
 
 ENUM_CRITERIA_SOURCE_CREATOR = Urheber d. Quelle
