--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -269,6 +269,8 @@ ENUM_CRITERIA_OWNER = Owner name
 
 ENUM_CRITERIA_PUBLISHING_INFO = Publishing Info
 
+ENUM_CRITERIA_RELEVANCE = Relevance
+
 ENUM_CRITERIA_REVIEW_METHOD = Review Method
 
 ENUM_CRITERIA_SOURCE_CREATOR = Source Creator
