--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -269,6 +269,8 @@ ENUM_CRITERIA_OWNER = Nombre del propietario
 
 ENUM_CRITERIA_PUBLISHING_INFO = Info de publicaci\u00F3n 
 
+ENUM_CRITERIA_RELEVANCE = Relevance
+
 ENUM_CRITERIA_REVIEW_METHOD = M\u00E9todo de revisi\u00F3n
 
 ENUM_CRITERIA_SOURCE_CREATOR = Fuente Creador 
