--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -269,6 +269,8 @@ ENUM_CRITERIA_OWNER = \u767B\u9332\u8005\u540D
 
 ENUM_CRITERIA_PUBLISHING_INFO = \u51FA\u7248\u60C5\u5831
 
+ENUM_CRITERIA_RELEVANCE = Relevance
+
 ENUM_CRITERIA_REVIEW_METHOD = \u67FB\u8AAD\u7A2E\u5225
 
 ENUM_CRITERIA_SOURCE_CREATOR = \u51FA\u7248\u8005
