--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -89,6 +89,8 @@ GenreNotSuitable = Das ausgew\u00E4hle Genre ist f\u00FCr die gew\u00E4hlte Coll
 
 IdTypeNotProvided = Bei einem Identifier fehlt der Typ.
 
+ImportNameNotProvided = Bitte geben Sie einen Namen f\u00FCr den Import an
+
 IncorrectClassification = Das eingegebene Stichwort entspricht nicht der angegebenen Klassifizierung.
 
 IncorrectDDCClassification = Das eingegebene Stichwort entspricht nicht der DDC-Klassifizierung.
@@ -150,6 +152,8 @@ StatisticsUpdatedDaily = Hinweis: Statistische Daten werden t\u00E4glich aktuali
 TitleNotProvided = Bitte geben Sie einen Titel ein.
 
 UnknownLanguageCode = Der eingegebene Sprachcode existiert nicht in ISO639-3
+
+UploadFileNotProvided = Bitte w\u00E4hlen Sie eine Datei aus
 
 ViewItemFull_inRevision = Dieser Datensatz ist in \u00DCberarbeitung! Letzte Nachricht:
 
