--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -92,6 +92,8 @@ GenreNotSuitable = \u9078\u629E\u4E2D\u306E\u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\
 
 IdTypeNotProvided = An identifier is missing the type.
 
+ImportNameNotProvided = NEW:Please enter a name for the import
+
 IncorrectClassification = \u5206\u985E\u4F53\u7CFB\uFF08\u4E3B\u984C\uFF09\u306B\u5165\u529B\u3055\u308C\u305F\u30AD\u30FC\u30EF\u30FC\u30C9\u306E\u66F8\u5F0F\u304C\u6B63\u3057\u304F\u3042\u308A\u307E\u305B\u3093\u3002
 
 IncorrectDDCClassification = \u30C7\u30E5\u30FC\u30A4\u5341\u9032\u5206\u985E\uFF08DDC\uFF09\u306B\u5B58\u5728\u3057\u306A\u3044\u30AD\u30FC\u30EF\u30FC\u30C9\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u3059\u3002
@@ -150,6 +152,8 @@ StatisticsUpdatedDaily = \ \u6CE8\u610F: \u5229\u7528\u7D71\u8A08\u30C7\u30FC\u3
 TitleNotProvided = \u30BF\u30A4\u30C8\u30EB\u60C5\u5831\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
 UnknownLanguageCode = The given language code does not exist in ISO639-3
+
+UploadFileNotProvided = NEW: Please select a file
 
 ViewItemFull_inRevision = This item is in rework! Last message:
 
