--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -92,6 +92,8 @@ GenreNotSuitable = The selected genre is not allowed in the actual collection.
 
 IdTypeNotProvided = An identifier is missing the type.
 
+ImportNameNotProvided = Please enter a name for the import
+
 IncorrectClassification = The entered keyword does not conform to the given classification.
 
 IncorrectDDCClassification = The entered keyword does not conform to the DDC classification. 
@@ -156,6 +158,8 @@ StatisticsUpdatedDaily = Notice: The statistic data is updated on a daily basis.
 TitleNotProvided = Title is required.
 
 UnknownLanguageCode = The given language code does not exist in ISO639-3
+
+UploadFileNotProvided = Please select a file
 
 ViewItemFull_inRevision = This item is in rework! Last message:
 
