--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -78,6 +78,8 @@ GenreNotProvided = Por favor, especifique el G\u00E9nero.
 
 GenreNotSuitable = El g\u00E9nero seleccionado no est\u00E1 permitido en la actual colecci\u00F3n.
 
+ImportNameNotProvided = NEW: Please enter a name for the import
+
 LocatorIsNoUri = La referencia externa no es una URL v\u00E1lida.
 
 #
@@ -118,6 +120,8 @@ SourceTitleNotProvided = Se ha introducido informaci\u00F3n de fuente sin un t\u
 StatisticsUpdatedDaily = Atenci\u00F3n: Los datos estad\u00EDsticos se actualizan diariamente.
 
 TitleNotProvided = Se requiere un t\u00EDtulo.
+
+UploadFileNotProvided = NEW: Please select a file
 
 ViewItemFull_inRevision = \u00A1Este item est\u00E1 siendo revisado! \u00DAltimo mensaje:
 
