PUBMAN-1663 implemented: Linguistic Literature: Extend search result list
Former-commit-id: 3538af51549cb72cf31c80d54add6f7bef6c5f96

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -960,6 +960,8 @@ SearchResultListPage = Suchergebnisse
 
 SearchResultList_btnSortItemList = Datens\u00E4tze sortieren
 
+SearchResultList_hits = Treffer
+
 SearchResultList_lblAdvancedSearch = Erneute Suche
 
 SearchResultList_lblBack = Zur\u00FCck
