--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -959,6 +959,8 @@ SearchResultListPage = Search Results
 
 SearchResultList_btnSortItemList = sort items
 
+SearchResultList_hits = hits
+
 SearchResultList_lblAdvancedSearch = Revise Search
 
 SearchResultList_lblBack = Back
