--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -939,6 +939,8 @@ SearchResultListPage = \u691C\u7D22\u7D50\u679C
 
 SearchResultList_btnSortItemList = \u30BD\u30FC\u30C8
 
+SearchResultList_hits = hits
+
 SearchResultList_lblAdvancedSearch = \u691C\u7D22\u3092\u3084\u308A\u76F4\u3059
 
 SearchResultList_lblBack = \u623B\u308B
