--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -950,6 +950,8 @@ SearchResultListPage = Resultados de la b\u00FAsqueda
 
 SearchResultList_btnSortItemList = ordenar items
 
+SearchResultList_hits = hits
+
 SearchResultList_lblAdvancedSearch = Revisar la b\u00FAsqueda
 
 SearchResultList_lblBack = Volver
