Former-commit-id: 28d1f4141a22eb07864f802c67ebf783c87bcd7a

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1615,6 +1615,12 @@ WithdrawItem_lnkWithdraw = Zur\u00FCckziehen
 
 Year = Jahr
 
+YearbookCandidatesPage = Jahrbuch Kandidaten
+
+YearbookItemCreatePage = Erstelle Jahrbuch
+
+YearbookMembersPage = Jahrbuch Mitglieder
+
 about = \u00DCber PubMan
 
 #
@@ -2303,6 +2309,8 @@ mainMenu_lnkHome = START
 mainMenu_lnkPolicy = Leitlinien&Impressum
 
 mainMenu_lnkQAWorkspace = QA BEREICH
+
+mainMenu_lnkYearbookWorkspace = JAHRBUCH
 
 mpipksDesc = MPI PKS Klassifikation
 
