--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1614,6 +1614,12 @@ WithdrawItem_lnkWithdraw = Withdraw
 
 Year = Year
 
+YearbookCandidatesPage = Yearbook Candidates
+
+YearbookItemCreatePage = Create Yearbook
+
+YearbookMembersPage = Yearbook Members
+
 about = About PubMan
 
 #
@@ -2305,6 +2311,8 @@ mainMenu_lnkHome = START
 mainMenu_lnkPolicy = Policy&Disclaimer
 
 mainMenu_lnkQAWorkspace = QA WORKSPACE
+
+mainMenu_lnkYearbookWorkspace = YEARBOOK
 
 mpipksDesc = MPI PKS Classification
 
