--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -1604,6 +1604,12 @@ WithdrawItem_lnkPublication = Publicaci\u00F3n
 
 WithdrawItem_lnkWithdraw = Retirar
 
+YearbookCandidatesPage = Yearbook Candidates
+
+YearbookItemCreatePage = Create Yearbook
+
+YearbookMembersPage = Yearbook Members
+
 about = Sobre PubMan
 
 #
@@ -2223,6 +2229,8 @@ mainMenu_lnkHome = INICIO
 mainMenu_lnkPolicy = Pol\u00EDtica y reclamaciones
 
 mainMenu_lnkQAWorkspace = QA WORKSPACE
+
+mainMenu_lnkYearbookWorkspace = YEARBOOK
 
 multipleImport_checkboxRollback = Deshacer si da error
 
