--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1591,6 +1591,12 @@ WithdrawItem_lnkWithdraw = \u53D6\u308A\u4E0B\u3052
 
 Year = \u520A\u884C\u5E74
 
+YearbookCandidatesPage = Yearbook Candidates
+
+YearbookItemCreatePage = Create Yearbook
+
+YearbookMembersPage = Yearbook Members
+
 about = PubMan\u306B\u3064\u3044\u3066
 
 #
@@ -2270,6 +2276,8 @@ mainMenu_lnkHome = \u30DB\u30FC\u30E0
 mainMenu_lnkPolicy = \u30DD\u30EA\u30B7\u30FC/\u514D\u8CAC\u4E8B\u9805
 
 mainMenu_lnkQAWorkspace = \u7BA1\u7406\u753B\u9762
+
+mainMenu_lnkYearbookWorkspace = YEARBOOK
 
 mpipksDesc = MPI PKS\u5206\u985E\u8868 (MPI PKS Classification)
 
